Rubber stamp by Adam.
        - Renamed JSStringRefCOM to JSStringRefBSTR since it he only thing the
        files contain are functions that operate on BSTRs.

        * API/JSStringRefBSTR.cpp: Copied from API/JSStringRefCOM.cpp.
        * API/JSStringRefBSTR.h: Copied from API/JSStringRefCOM.h.
        * API/JSStringRefCOM.cpp: Removed.
        * API/JSStringRefCOM.h: Removed.
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27137 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj
+++ b/JavaScriptCore/JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj
@@ -803,19 +803,19 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\API\JSStringRefBSTR.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\API\JSStringRefBSTR.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\API\JSStringRefCF.cpp"
 				>
 			</File>
 			<File
 				RelativePath="..\..\API\JSStringRefCF.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\API\JSStringRefCOM.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\API\JSStringRefCOM.h"
 				>
 			</File>
 			<File
