Reviewed by Adam.
        - Stubbed out IWebScriptCallFrame for Drosera.

        * Interfaces/IWebScriptCallFrame.idl: Added function declarations.
        * WebKit.vcproj/WebKit.vcproj: Added .h/.cpp files to the project.
        * WebScriptCallFrame.cpp: Added.
        (WebScriptCallFrame::WebScriptCallFrame):
        (WebScriptCallFrame::~WebScriptCallFrame):
        (WebScriptCallFrame::createInstance):
        (WebScriptCallFrame::QueryInterface):
        (WebScriptCallFrame::AddRef):
        (WebScriptCallFrame::Release):
        (WebScriptCallFrame::caller):
        (WebScriptCallFrame::scopeChain):
        (WebScriptCallFrame::functionName):
        (WebScriptCallFrame::evaluateWebScript):
        * WebScriptCallFrame.h: Added.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27156 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/WebKit.vcproj/WebKit.vcproj
+++ b/WebKit/win/WebKit.vcproj/WebKit.vcproj
@@ -546,6 +546,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\WebScriptCallFrame.h"
+				>
+			</File>
+			<File
 				RelativePath="..\WebScriptDebugServer.h"
 				>
 			</File>
@@ -735,6 +739,10 @@
 			</File>
 			<File
 				RelativePath="..\WebResource.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\WebScriptCallFrame.cpp"
 				>
 			</File>
 			<File
