--- a/WebKit/win/WebKit.vcproj/WebKit.vcproj
+++ b/WebKit/win/WebKit.vcproj/WebKit.vcproj
@@ -54,7 +54,7 @@
 				WarnAsError="true"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4127;4355"
+				DisableSpecificWarnings="4127;4355;4800"
 				ForcedIncludeFiles="CodeAnalysisConfig.h"
 			/>
 			<Tool
@@ -145,7 +145,7 @@
 				WarnAsError="true"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4127;4355"
+				DisableSpecificWarnings="4127;4355;4800"
 				ForcedIncludeFiles="CodeAnalysisConfig.h"
 			/>
 			<Tool
@@ -240,7 +240,7 @@
 				WarnAsError="true"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4127;4355"
+				DisableSpecificWarnings="4127;4355;4800"
 				ForcedIncludeFiles="CodeAnalysisConfig.h"
 			/>
 			<Tool
