Change ALWAYS_INLINE and WTF_PRIVATE_INLINE to use __forceinline on Windows
         Speeds up SunSpider by 0.4%.

         Reviewed by Steve and Maciej.

         * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj: Disable
         a warning during LTCG in release builds about double -> float
         conversion.
         * wtf/AlwaysInline.h:
         * wtf/FastMalloc.h:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27297 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj
+++ b/JavaScriptCore/JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj
@@ -389,6 +389,14 @@
 			<File
 				RelativePath="..\..\kjs\number_object.cpp"
 				>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						DisableSpecificWarnings="4756"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\..\kjs\number_object.h"
