Reviewed by Sam.
        - http://bugs.webkit.org/show_bug.cgi?id=15915
          add an evaluation path for booleans like the one we have for numbers

        Gives 1.1% on SunSpider.

        * kjs/grammar.y: Create TrueNode and FalseNode instead of BooleanNode.

        * kjs/nodes.h: Changed to use Noncopyable. Moved optimizeForUnnecessaryResult
        down from Node to ExpressionNode. Changed some classes to not inherit from
        ExpressionNode where not necessary, and removed unnneeded evaluate functions
        as well as evaluate functions that need not be virtual. Call the
        optimizeForUnnecessaryResult function on the start of a for loop too.
        * kjs/nodes.cpp:
        (KJS::ExpressionNode::evaluateToBoolean): Added.
        (KJS::FalseNode::evaluate): Added.
        (KJS::TrueNode::evaluate): Added.
        (KJS::NumberNode::evaluateToBoolean): Added.
        (KJS::StringNode::evaluateToBoolean): Added.
        (KJS::LocalVarAccessNode::evaluateToBoolean): Added.
        (KJS::BracketAccessorNode::evaluateToBoolean): Added.
        (KJS::LogicalNotNode::evaluate): Changed to call evaluateToBoolean.
        (KJS::LogicalNotNode::evaluateToBoolean): Added.
        (KJS::lessThan): Changed to return bool.
        (KJS::lessThanEq): Ditto.
        (KJS::LessNode::evaluate): Changed since lessThan returns bool.
        (KJS::LessNode::evaluateToBoolean): Added.
        (KJS::GreaterNode::evaluate): Changed since lessThanEq returns bool.
        (KJS::GreaterNode::evaluateToBoolean): Added.
        (KJS::LessEqNode::evaluate): Changed since lessThanEq returns bool.
        (KJS::LessEqNode::evaluateToBoolean): Added.
        (KJS::GreaterEqNode::evaluate): Changed since lessThan returns bool.
        (KJS::GreaterEqNode::evaluateToBoolean): Added.
        (KJS::InstanceOfNode::evaluateToBoolean): Added.
        (KJS::InNode::evaluateToBoolean): Added.
        (KJS::EqualNode::evaluateToBoolean): Added.
        (KJS::NotEqualNode::evaluateToBoole

--- a/JavaScriptCore/JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj
+++ b/JavaScriptCore/JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj
@@ -567,23 +567,15 @@
 			Name="PCRE"
 			>
 			<File
-				RelativePath="..\..\wtf\FastMallocPCRE.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\pcre\pcre-config.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\pcre\pcre.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\pcre\pcre_compile.c"
+				RelativePath="..\..\pcre\pcre_compile.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\pcre\pcre_exec.c"
+				RelativePath="..\..\pcre\pcre_exec.cpp"
 				>
 			</File>
 			<File
@@ -591,19 +583,19 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\pcre\pcre_ord2utf8.c"
+				RelativePath="..\..\pcre\pcre_ord2utf8.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\pcre\pcre_tables.c"
+				RelativePath="..\..\pcre\pcre_tables.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\pcre\pcre_ucp_searchfuncs.c"
+				RelativePath="..\..\pcre\pcre_ucp_searchfuncs.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\pcre\pcre_xclass.c"
+				RelativePath="..\..\pcre\pcre_xclass.cpp"
 				>
 			</File>
 			<File
