Windows build fix
        Roll out some changes that were (seemingly accidentally) checked in
        with r27664.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27669 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj
+++ b/JavaScriptCore/JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj
@@ -567,15 +567,23 @@
 			Name="PCRE"
 			>
 			<File
+				RelativePath="..\..\wtf\FastMallocPCRE.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\pcre\pcre-config.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\pcre\pcre.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\pcre\pcre_compile.cpp"
+				RelativePath="..\..\pcre\pcre_compile.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\pcre\pcre_exec.cpp"
+				RelativePath="..\..\pcre\pcre_exec.c"
 				>
 			</File>
 			<File
@@ -583,19 +591,19 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\pcre\pcre_ord2utf8.cpp"
+				RelativePath="..\..\pcre\pcre_ord2utf8.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\pcre\pcre_tables.cpp"
+				RelativePath="..\..\pcre\pcre_tables.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\pcre\pcre_ucp_searchfuncs.cpp"
+				RelativePath="..\..\pcre\pcre_ucp_searchfuncs.c"
 				>
 			</File>
 			<File
-				RelativePath="..\..\pcre\pcre_xclass.cpp"
+				RelativePath="..\..\pcre\pcre_xclass.c"
 				>
 			</File>
 			<File
