Squashed commit of the following:
commit 3e6cb737b3b823b4bf177b9e0c2fcfcc38baf46d
Author: Brady Eidson <beidson@apple.com>
Date:   Tue Nov 13 16:22:36 2007 -0800

    Changelog for commit

commit 4be13a5ef17685368e68a76292b785c99da1d7f2
Author: Brady Eidson <beidson@apple.com>
Date:   Tue Nov 13 16:19:34 2007 -0800

    Make inspector work with new API

commit c500ed90c32b31fbc37a183c8ae5427f36b9ccc2
Author: Brady Eidson <beidson@apple.com>
Date:   Tue Nov 13 14:37:16 2007 -0800

    Woops!

commit c61b147f35a2801c340f82054d177914da6ccde5
Author: Brady Eidson <beidson@apple.com>
Date:   Tue Nov 13 11:45:40 2007 -0800

    Ander's review comments

commit f3dc2683acc5730cbab8758226adae3e35f7263b
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 12 18:05:21 2007 -0800

    Initial vcproj changes after the rebase

commit c8cf9be275479ff1fb39b911e5165f07fcd5ae34
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 12 18:02:30 2007 -0800

    Fixed Changelog a bit

commit c9790cde9b79e25690f1c0b34b9c1e77d2f4449f
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 12 16:53:48 2007 -0800

    Finish the rebase/trunk merge

commit 663ad85619ec677eb5c52bed3c59b8b3f50de624
Author: Brady Eidson <beidson@apple.com>
Date:   Tue Nov 6 11:54:26 2007 -0800

    VCProj changes for new SQL api + blind attempt at keeping qt/gtk going

commit 2aceeb3bdfa6894bb4e93c0b129867059e9cdad7
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 5 15:27:55 2007 -0800

    Changelog edit cleanup

commit a05f11fa4fa0ba935eb28df6d9628f29a4074d7a
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 5 15:25:27 2007 -0800

    Changelog entries and small style cleanup

commit a2d34a78d06f446f4bdb6ea1797dfb91cfc336fe
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 5 13:37:10 2007 -0800

    Minor edit

commit eaf0aa9c07cfeb54df312c130677ecbc60728c5f
Author: Brady Eidson <beidson@apple.com>
Date:   Mon Nov 5 13:32:20 2007 -0800

    Do version check at time of executeSql



--- a/WebCore/WebCore.vcproj/WebCore.vcproj
+++ b/WebCore/WebCore.vcproj/WebCore.vcproj
@@ -1253,14 +1253,6 @@
 				>
 			</File>
 			<File
-				RelativePath="$(WebKitOutputDir)\obj\$(ProjectName)\DerivedSources\JSSQLCallback.cpp"
-				>
-			</File>
-			<File
-				RelativePath="$(WebKitOutputDir)\obj\$(ProjectName)\DerivedSources\JSSQLCallback.h"
-				>
-			</File>
-			<File
 				RelativePath="$(WebKitOutputDir)\obj\$(ProjectName)\DerivedSources\JSSQLError.cpp"
 				>
 			</File>
@@ -1282,6 +1274,14 @@
 			</File>
 			<File
 				RelativePath="$(WebKitOutputDir)\obj\$(ProjectName)\DerivedSources\JSSQLResultSetRowList.h"
+				>
+			</File>
+			<File
+				RelativePath="$(WebKitOutputDir)\obj\WebCore\DerivedSources\JSSQLTransaction.cpp"
+				>
+			</File>
+			<File
+				RelativePath="$(WebKitOutputDir)\obj\WebCore\DerivedSources\JSSQLTransaction.h"
 				>
 			</File>
 			<File
@@ -7504,19 +7504,35 @@
 					>
 				</File>
 				<File
-					RelativePath="..\bindings\js\JSCustomSQLCallback.cpp"
+					RelativePath="..\bindings\js\JSCustomSQLStatementCallback.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\bindings\js\JSCustomSQLCallback.h"
+					RelativePath="..\bindings\js\JSCustomSQLStatementCallback.h"
 					>
 				</File>
 				<File
-					RelativePath="..\bindings\js\JSCustomVersionChangeCallback.cpp"
+					RelativePath="..\bindings\js\JSCustomSQLStatementErrorCallback.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\bindings\js\JSCustomVersionChangeCallback.h"
+					RelativePath="..\bindings\js\JSCustomSQLStatementErrorCallback.h"
+					>
+				</File>
+				<File
+					RelativePath="..\bindings\js\JSCustomSQLTransactionCallback.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\bindings\js\JSCustomSQLTransactionCallback.h"
+					>
+				</File>
+				<File
+					RelativePath="..\bindings\js\JSCustomSQLTransactionErrorCallback.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\bindings\js\JSCustomSQLTransactionErrorCallback.h"
 					>
 				</File>
 				<File
@@ -7681,6 +7697,10 @@
 				</File>
 				<File
 					RelativePath="..\bindings\js\JSSQLResultSetRowListCustom.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\bindings\js\JSSQLTransactionCustom.cpp"
 					>
 				</File>
 				<File
@@ -9229,6 +9249,14 @@
 			Name="storage"
 			>
 			<File
+				RelativePath="..\storage\ChangeVersionWrapper.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\storage\ChangeVersionWrapper.h"
+				>
+			</File>
+			<File
 				RelativePath="..\storage\Database.cpp"
 				>
 			</File>
@@ -9242,14 +9270,6 @@
 			</File>
 			<File
 				RelativePath="..\storage\DatabaseAuthorizer.h"
-				>
-			</File>
-			<File
-				RelativePath="..\storage\DatabaseCallback.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\storage\DatabaseCallback.h"
 				>
 			</File>
 			<File
@@ -9298,6 +9318,38 @@
 			</File>
 			<File
 				RelativePath="..\storage\SQLResultSetRowList.h"
+				>
+			</File>
+			<File
+				RelativePath="..\storage\SQLStatement.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\storage\SQLStatement.h"
+				>
+			</File>
+			<File
+				RelativePath="..\storage\SQLStatementCallback.h"
+				>
+			</File>
+			<File
+				RelativePath="..\storage\SQLStatementErrorCallback.h"
+				>
+			</File>
+			<File
+				RelativePath="..\storage\SQLTransaction.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\storage\SQLTransaction.h"
+				>
+			</File>
+			<File
+				RelativePath="..\storage\SQLTransactionCallback.h"
+				>
+			</File>
+			<File
+				RelativePath="..\storage\SQLTransactionErrorCallback.h"
 				>
 			</File>
 			<File
