--- a/WebCore/WebCore.vcproj/WebCore.vcproj
+++ b/WebCore/WebCore.vcproj/WebCore.vcproj
@@ -3880,6 +3880,18 @@
 					RelativePath="..\platform\win\WidgetWin.cpp"
 					>
 				</File>
+				<File
+					RelativePath="..\platform\win\WindowMessageBroadcaster.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\platform\win\WindowMessageBroadcaster.h"
+					>
+				</File>
+				<File
+					RelativePath="..\platform\win\WindowMessageListener.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="cf"
